--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,7 @@ a:hover {
     .navlist a {
         font-size: 18px;
         margin-left: 20px;
+        font-weight: 500;
         font-variant-caps: all-petite-caps;
     }
 }
@@ -839,43 +840,15 @@ footer a:hover {
 
 .case-d {
     width: 100%;
-    /* height: 80vh; */
     display: flex;
-    flex-direction: row;
     align-items: flex-end;
     justify-content: space-between;
     padding-bottom: 20px;
 }
 
-/* .case-d-text {
-    width: 70%;
-} */
-
 .case-d h2 {
-    margin-top: 145px;
-    font-size: 160px;
     line-height: .6;
     margin-bottom: 35px;
-}
-
-.case-d-text-all {
-    display: flex;
-    flex-direction: row;
-    width: 80%;
-}
-
-.case-d-desc-area {
-    width: 5%;
-    margin-right: 90px;
-}
-
-.case-d-desc-y {
-    width: 5%;
-    margin-right: 90px;
-}
-
-.case-d-desc {
-    width: 65%;
 }
 
 .case-d-text-all h3 {
@@ -898,7 +871,6 @@ footer a:hover {
 
 .prevnext a {
     margin: 0;
-    font-size: 110px;
     font-weight: 400;
     text-decoration: none;
 }
@@ -949,6 +921,64 @@ footer a:hover {
 
 .case-link button:hover {
     background-color: #ff751f;
+}
+
+@media screen and (min-width: 460px){
+    .case-d h2 {
+        margin-top: 145px;
+        font-size: 160px;
+    }
+
+    .case-d-text-all {
+        display: flex;
+        flex-direction: row;
+        width: 80%;
+    }
+    
+    .case-d-desc-area {
+        width: 5%;
+        margin-right: 90px;
+    }
+    
+    .case-d-desc-y {
+        width: 5%;
+        margin-right: 90px;
+    }
+    
+    .case-d-desc {
+        width: 65%;
+    }
+
+    .prevnext a {
+        font-size: 110px;
+    }
+}
+
+@media screen and (max-width: 460px){
+    .case-d h2 {
+        margin-top: 145px;
+        font-size: 100px;
+    }
+
+    .case-d-text-all {
+        display: grid;
+        gap: 10px;
+        grid-template-columns: auto auto;
+        width: 100%;
+    }
+      
+    .case-d-desc {
+        grid-column: 1 / 2;
+        grid-row: 2;
+    }
+    
+    .case-d-desc {
+        width: 65%;
+    }
+
+    .prevnext a {
+        font-size: 80px;
+    }
 }
 
 
